--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^5.2.1",
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
+    "nodemailer": "^6.9.8",
     "pdfkit": "^0.17.2"
   }
 }
