--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
-    "init-admin": "node initAdmin.js"
+    "init-admin": "node initAdmin.js",
+    "migrate-passwords": "node migrateAdminPasswords.js"
   },
   "keywords": [],
   "author": "",
